[package]
name = "rusty_fence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trust-dns-resolver= "*"
trust-dns-server= "*"
trust-dns-proto= "*"
structopt= "*"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
